<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".presentation.invoices.view.MyInvoicesActivity">

    <ImageView
        android:id="@+id/ivBackIcon"
        android:layout_width="@dimen/m3_comp_icon_size"
        android:layout_height="@dimen/m3_comp_icon_size"
        android:layout_marginStart="@dimen/m3_sys_spacing_3"
        android:layout_marginTop="@dimen/m3_sys_spacing_3"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/iberdrola_dark_green" />

    <TextView
        android:id="@+id/tvBackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m3_sys_spacing_1"
        android:fontFamily="@font/misans_bold"
        android:text="@string/my_invoices_back"
        android:textColor="@color/iberdrola_dark_green"
        android:textSize="@dimen/m3_sys_typescale_headline"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivBackIcon"
        app:layout_constraintStart_toEndOf="@id/ivBackIcon"
        app:layout_constraintTop_toTopOf="@id/ivBackIcon" />

    <!-- Overlay transparente para gestionar el clic de toda la zona "Atrás" -->
    <View
        android:id="@+id/btnBack"
        android:layout_width="@dimen/back_btn_overlay_width"
        android:layout_height="@dimen/back_btn_overlay_height"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/my_invoices_back"
        android:focusable="true"
        android:minWidth="@dimen/min_touch_target_size"
        android:minHeight="@dimen/min_touch_target_size"
        app:layout_constraintBottom_toBottomOf="@id/ivBackIcon"
        app:layout_constraintEnd_toEndOf="@id/tvBackText"
        app:layout_constraintStart_toStartOf="@id/ivBackIcon"
        app:layout_constraintTop_toTopOf="@id/ivBackIcon"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m3_sys_spacing_3"
        android:layout_marginTop="@dimen/m3_sys_spacing_3"
        android:layout_marginEnd="@dimen/m3_sys_spacing_3"
        android:fontFamily="@font/misans_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/m3_sys_typescale_title1"
        android:textStyle="bold"
        android:text="@string/my_invoices_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBackIcon"
        tools:text="@string/my_invoices_title" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m3_sys_spacing_3"
        android:layout_marginTop="@dimen/m3_sys_spacing_1"
        android:layout_marginEnd="@dimen/m3_sys_spacing_3"
        android:fontFamily="@font/misans_bold"
        android:textColor="@color/dark_grey_text"
        android:textSize="@dimen/m3_sys_typescale_subhead"
        android:textStyle="bold"
        android:text="@string/my_invoices_mock_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="@string/my_invoices_mock_address" />

    <View
        android:id="@+id/tabDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/tab_divider_height"
        android:layout_marginStart="@dimen/m3_sys_spacing_3"
        android:layout_marginEnd="@dimen/m3_sys_spacing_3"
        android:background="@color/tab_misfacturas"
        app:layout_constraintBottom_toBottomOf="@id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m3_sys_spacing_3"
        android:layout_marginTop="@dimen/m3_sys_spacing_0"
        android:layout_marginEnd="@dimen/m3_sys_spacing_3"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddress"
        app:tabIndicator="@drawable/bg_tab_indicator"
        app:tabIndicatorHeight="@dimen/tab_indicator_height"
        app:tabIndicatorColor="@null"
        app:tabIndicatorFullWidth="false"
        app:tabGravity="start"
        app:tabMode="scrollable"
        app:tabRippleColor="@android:color/transparent"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/CustomTabTextAppearance"
        app:tabTextColor="@color/light_grey">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_light" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_gas" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/m3_sys_spacing_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
